--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pywin32 = "*"
 pypiwin32 = "*"
 psutil = "*"
 PyAutoGUI = "*"
-nuitka = "*"
+pyinstaller = "*"
 
 [requires]
 python_version = "3.8"
